--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,3 +18,12 @@ jobs:
 
       - name: Run tests
         run: mvn clean test
+        
+      - name: Generate Allure Report
+        run: mvn allure:report
+
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: target/site/allure-maven-plugin
