--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,10 +20,10 @@ jobs:
         run: mvn clean test
         
       - name: Generate Allure Report
-        run: mvn allure:report
+        run: allure generate target/allure-results -o target/allure-report --clean
 
-      - name: Upload Allure Report
+      - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: allure-report
-          path: target/site/allure-maven-plugin
+           name: allure-report
+           path: target/allure-report
