--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,7 @@ jobs:
         run: mvn clean test
         
       - name: Generate Allure Report
-        run: allure generate target/allure-results -o target/allure-report --clean
+        run: allure generate allure-results -o allure-report --clean
 
       - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v3
