--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Install Allure CLI on Windows
+        run: |
+          choco install allure.commandline --version=2.20.1 -y
+          refreshenv
+          
       - name: Run tests
         run: mvn clean test
         
@@ -26,4 +31,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
            name: allure-report
-           path: target/allure-report
+           path: allure-report
